fix issue where footer is broken on desktop

--- a/portfolio.css
+++ b/portfolio.css
@@ -101,7 +101,7 @@ body {
     bottom: 0;
     width: 100%;
 
-    display: flex;
+    display: flex !important;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-start;
